--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
         </section>
      </main>
     <footer>
-        <p>&copy; Copyright 2020 - Leticia Riera</p>    
+        <p>&copy; Copyright 2020 - Leticia Riera</p>
+        <p>Todos los derechos reservados</p>    
     </footer>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
