Correccion foto perfil

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="author" content="Leticia Riera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Leticia Riera</title>
+    <meta name="description" content="Desarrollo web y plan de marketing a medida para empresas.">
+    <meta name="keywords" content="html, css, analytics, ads, sitios, diseno, webs, informatica, desarrollo, pymes, empresas">
+    <title>Desarrolo web - Leticia Riera</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -119,7 +121,7 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <img src="images/perfil-byn.png" alt="">
+                  <img class="image__perfil" src="images/perfil-byn.png" alt="">
                 </div>
                 <div class="col-md-6">
                     <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur reprehenderit vitae consequatur veniam aperiam molestias ad ex ratione dolore doloribus temporibus expedita quam, commodi nam culpa eius magnam voluptatem quod?
@@ -148,7 +150,7 @@
                   <a class="over-area" href="#enlazarejemplo">
                     <div class="content">
                       <label class="label label-danger label-fill">Diseño web</label>
-                      <h2>Desarrollo Front End</h2>
+                      <h3>Desarrollo Front End</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
                     </div>
                   </a>
@@ -161,7 +163,7 @@
                   <a class="over-area" href="#enlazarejemplo">
                     <div class="content">
                       <label class="label label-danger label-fill">Marketing</label>
-                      <h2>Social Marketing</h2>
+                      <h3>Social Marketing</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
                     </div>
                   </a>
@@ -174,7 +176,7 @@
                   <a class="over-area" href="#enlazarejemplo">
                     <div class="content">
                       <label class="label label-danger label-fill">Diseño web</label>
-                      <h2>Wordpress</h2>
+                      <h3>Wordpress</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
                     </div>
                   </a>
@@ -187,7 +189,7 @@
                   <a class="over-area" href="#enlazarejemplo">
                     <div class="content">
                       <label class="label label-danger label-fill">Analytics</label>
-                      <h2>Google Analytics</h2>
+                      <h3>Google Analytics</h3>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
                     </div>
                   </a>
