Correccion foto contacto

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <img src="images/img-contacto.jpg" alt="Contacto de la página">
+                <img class="image__contacto" src="images/img-contacto.jpg" alt="Contacto de la página">
               </div>
               <div class="col-md-6">
                 <div class="formulario">
