--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </section>
      </main>
     <footer>
-        <p>&copy; Copyright 2020 - Leticia Riera</p>
+        <p>&copy; Copyright 2020 - Leticia Riera</p><br>
         <p>Todos los derechos reservados</p>    
     </footer>
     <script src="js/popper.min.js"></script>
