--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="content">
                       <label class="label label-danger label-fill">Marketing</label>
                       <h3>Social Marketing</h3>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
+                      <p>Estrategia de marketing para pautar en redes sociales.</p>
                     </div>
                   </a>
                 </div>
