--- a/index con carousel.html
+++ b/index con carousel.html
@@ -46,19 +46,60 @@
       </header>
       <main>
         <!-- Hero -->
-        <section id="index" class="bgimage">
+        <section class="bgimage">
           <div class="container-fluid">
             <div class="row">
-              <div class="d-flex flex-column pl-sm-2 pl-md-5 pl-lg-5 pt-5 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 class="col-md-6 pt-sm-0 pt-md-5">Soluciones Digitales <br>
-                  Desarrollo Web y Marketing.</h1>
-                <p class="col-md-6">This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p class="col-md-6"><a hre f="#" class="btn btn-primary btn-large">Learn more »</a></p>
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3>Soluciones Digitales <br>
+                  Desarrollo Web y Marketing.</h3>
+                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                <p><a hre f="#" class="btn btn-primary btn-large">Learn more »</a></p>
               </div>
             </div>
           </div>
         </section>
 
+        <!-- Carousel -->
+        <section id="index">
+          <div id="carouselExampleCaptions" class="carousel slide pt-5" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/slider-home-2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/slider-home.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/slider-perfil.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    </div>
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+          </div>
+        </section>
         <section  id="servicios">
             <div class="container">
               <div class="title-area">
