Rediseño seccíon perfil

--- a/gracias.html
+++ b/gracias.html
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto ">
                   <li class="nav-item active">
-                      <a class="nav-link smooth-scroll" href="/index.html">Inicio<span class="sr-only">(current)</span></a>
+                      <a class="nav-link smooth-scroll" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/index.html/#servicios">Servicios</a>
+                        <a class="nav-link smooth-scroll" href="/#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link smooth-scroll" href="/index.html/#perfil">Perfil</a>
+                      <a class="nav-link smooth-scroll" href="/#perfil">Perfil</a>
                   </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/index.html/#porfolio">Porfolio</a>
+                        <a class="nav-link smooth-scroll" href="/#porfolio">Porfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link smooth-scroll" href="/index.html/#contacto">Contacto</a>
+                        <a class="nav-link smooth-scroll" href="/#contacto">Contacto</a>
                     </li>
               </ul>
 
