--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <img src="images/hero-image-01.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6 align-self-center">
-                <h2 class="iq-fw-8 mb-2 iq-mt-40">Soluciones en Marketing digital</h2>
+                <h2 class="mb-2">Soluciones en Marketing digital</h2>
                 <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
                 </p>
-                <ul class="fa-ul">
+                <ul class="fa-ul listing-mark">
                   <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
                   <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
                   <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
@@ -78,19 +78,23 @@
           </div>
         </section>
 
+<!--  Servicios   -->
         <section id="servicios" class="servicios">
           <div class="container">
+            <div class="title-area">
+              <h2>Servicios</h2>
+              <div class="separator separator-danger">♦</div>
+            </div>
             <div class="row no-gutters flex-row-reverse">
               <div class="col-lg-6 align-self-center">
-                <h2 class="iq-fw-8 mb-2 iq-mt-40">Servicios</h2>
                 <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
                 </p>
-                <ul class="fa-ul li__servicios">
+                <ul class="fa-ul li__servicios servicios__margen">
                   <li>
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="fas fa-code icon__servicios"></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 mb-2 iq-fw-8"><a href="service-detail.html">Desarrollo web</a></h5>
+                           <h5 class="mt-0 mb-2 servicios__title"><a href="service-detail.html">Desarrollo web</a></h5>
                            <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
                         </div>
                      </div>
@@ -99,7 +103,7 @@
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="fas fa-rss icon__servicios""></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 mb-2 iq-fw-8"><a href="service-detail.html">Social Marketing</a></h5>
+                           <h5 class="mt-0 mb-2 servicios__title"><a href="service-detail.html">Social Marketing</a></h5>
                            <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
                         </div>
                      </div>
@@ -108,7 +112,7 @@
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="far fa-chart-bar icon__servicios""></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 mb23 iq-fw-8"><a href="service-detail.html">Business Analytics</a></h5>
+                           <h5 class="mt-0 servicios__title"><a href="service-detail.html">Business Analytics</a></h5>
                            <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
                         </div>
                      </div>
@@ -121,26 +125,77 @@
             </div>
           </div>
         </section>
-        <section id="perfil">
-          <div class="container">
-              <div class="title-area">
-                <h2>Perfil</h2>
-                <div class="separator separator-danger">♦</div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <img class="image__perfil" src="images/perfil-byn.png" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur reprehenderit vitae consequatur veniam aperiam molestias ad ex ratione dolore doloribus temporibus expedita quam, commodi nam culpa eius magnam voluptatem quod?
-                    <br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid autem et accusantium natus repudiandae quia distinctio, beatae minima accusamus ea temporibus numquam nulla consectetur, at eligendi aut consequuntur quidem atque.
-                    </p>
-                 </div>
-              </div>
-          </div>          
-        </section>
 
+<!-- Perfil  -->
+<section id="perfil" class="position-relative">
+  <div class="container">
+     <div class="row">
+        <div class="col-sm-12 text-center">
+          <div class="title-area">
+            <h2>Perfil</h2>
+            <div class="separator separator-danger">♦</div>
+          </div>
+        </div>
+     </div>
+     <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+           <div class="media perfil__margen">
+              <div class="media-body mr-3 text-right float-left">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">HTML 5</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+              <div class="service-shap align-self-center float-right"><i class="fab fa-html5 icon__servicios"></i></i></div>
+           </div>
+           <div class="media perfil__margen">
+              <div class="media-body mr-3 text-right float-left">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Css</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+              <div class="service-shap align-self-center float-right"><i class="fab fa-css3-alt icon__servicios"></i></div>
+           </div>
+           <div class="media perfil__margen mb-0">
+              <div class="media-body mr-3 text-right float-left">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">React</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+              <div class="service-shap align-self-center float-right"><i class="fab fa-react icon__servicios"></i></div>
+           </div>
+        </div>
+        <div class="col-md-4 align-self-center  feature-images">
+           <img src="images/herramientas.png" class="img-fluid " alt="image">
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+           <div class="media perfil__margen">
+              <div class="service-shap align-self-center"><i class="fab fa-js-square icon__servicios"></i></div>
+              <div class="media-body ml-3">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">JavaScript</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+           </div>
+           <div class="media perfil__margen">
+              <div class="service-shap align-self-center"><i class="fab fa-php icon__servicios"></i></div>
+              <div class="media-body ml-3">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Php</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+           </div>
+           <div class="media perfil__margen mb-0">
+              <div class="service-shap align-self-center"><i class="fas fa-database icon__servicios"></i></div>
+              <div class="media-body ml-3">
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">MySql</a></h5>
+                 <p class="mb-0">It is a long established fact that a reader</p>
+              </div>
+           </div>
+        </div>
+     </div>
+  </div>
+  <!-- <div class="scrollme">
+     <img src="images/others/32.png" class="img-fluid service-right animateme" data-when="exit" data-from="0.5" data-to="0" data-translatey="100" alt="image" style="opacity: 1; transform: translate3d(0px, 57px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">
+  </div> -->
+</section>
+
+
+<!--   Porfolio   -->
         <section id="porfolio" class="porfolios">
           <div class="title-area">
             <h2>Porfolio</h2>
@@ -215,7 +270,7 @@
             </div>
             <form action="gracias.html" method="POST">
               <div class="row">
-                <div class="col">
+                <div class="col-md-6">
                   <label for="nombre">Nombre</label>
                   <input id="nombre" type="text" name="nombre" class="form-control" placeholder="Nombre">
                   <label for="apellido">Apellido</label>
@@ -223,9 +278,9 @@
                   <label for="email">Email</label>
                   <input id="email" type="email" name="email" class="form-control" placeholder="Email">
                 </div>
-                <div class="col">
+                <div class="col-md-6">
                   <label for="mensaje">Mensaje</label>
-                    <textarea name="mensaje" id="mensaje" cols="43" rows="5" class="form-control" placeholder="Mensaje"></textarea>
+                    <textarea name="mensaje" id="mensaje" cols="43" rows="7" class="form-control" placeholder="Mensaje"></textarea>
                 </div>
               </div>
               <button type="submit" class="btn btn-primary">Enviar</button>
