--- a/index.html
+++ b/index.html
@@ -289,8 +289,16 @@
         </section>
      </main>
     <footer>
-        <p>&copy; Copyright 2020 - Leticia Riera</p><br>
-        <p>Todos los derechos reservados</p>    
+      <div class="container">
+        <div class="row">
+          <div class=" col-md-12">
+            <p>&copy; Copyright 2020 - Leticia Riera</p><br>
+            <p>Todos los derechos reservados</p>    
+          </div>
+
+        </div>
+
+      </div>
     </footer>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
