--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Desarrollo web y plan de marketing a medida para empresas.">
     <meta name="keywords" content="html, css, analytics, ads, sitios, diseno, webs, informatica, desarrollo, pymes, empresas">
     <title>Desarrolo web - Leticia Riera</title>
+    <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,600;0,800;0,900;1,200;1,400;1,600;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
