--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="author" content="Leticia Riera">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Desarrollo web y plan de marketing a medida para empresas.">
-    <meta name="keywords" content="html, css, analytics, ads, sitios, diseno, webs, informatica, desarrollo, pymes, empresas">
-    <title>Desarrolo web - Leticia Riera</title>
+    <meta name="description" content="Desarrollo web y plan de marketing a medida para potenciar tu empresas.">
+    <meta name="keywords" content="diseño, diseño web, diseño grafico, marketing digital, social media, cordoba, argentina, e-commerce, ecommerce, inteligencia digital, e-marketing, empresa, agencia, estudio, pymes, negocio, comunicación, comunicacion, asesoramiento, asesores, consultora, consultoria">
+    <title>Desarrolo Web - Marketing Digital</title>
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,600;0,800;0,900;1,200;1,400;1,600;1,800;1,900&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
@@ -82,11 +82,13 @@
 <!--  Servicios   -->
         <section id="servicios" class="servicios">
           <div class="container">
-            <div class="title-area">
-              <h2>Servicios</h2>
-              <div class="separator separator-danger">♦</div>
-            </div>
             <div class="row no-gutters flex-row-reverse">
+              <div class="col-sm-12 text-center">
+                <div class="title-area">
+                  <h2>Servicios</h2>
+                  <div class="separator separator-danger">♦</div>
+                </div>
+              </div>
               <div class="col-lg-6 align-self-center">
                 <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
                 </p>
@@ -131,14 +133,12 @@
 <section id="perfil" class="position-relative">
   <div class="container">
      <div class="row">
-        <div class="col-sm-12 text-center">
-          <div class="title-area">
-            <h2>Perfil</h2>
-            <div class="separator separator-danger">♦</div>
-          </div>
+      <div class="col-sm-12 text-center">
+        <div class="title-area">
+          <h2>Perfil</h2>
+          <div class="separator separator-danger">♦</div>
         </div>
-     </div>
-     <div class="row">
+      </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
            <div class="media perfil__margen">
               <div class="media-body mr-3 text-right float-left">
@@ -190,23 +190,22 @@
         </div>
      </div>
   </div>
-  <!-- <div class="scrollme">
-     <img src="images/others/32.png" class="img-fluid service-right animateme" data-when="exit" data-from="0.5" data-to="0" data-translatey="100" alt="image" style="opacity: 1; transform: translate3d(0px, 57px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);">
-  </div> -->
 </section>
 
 
 <!--   Porfolio   -->
         <section id="porfolio" class="porfolios">
-          <div class="title-area">
-            <h2>Porfolio</h2>
-            <div class="separator separator-danger">♦</div>
-            <p class="description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at magni, saepe quos quod numquam soluta consectetur illum tenetur, facere consequatur in ex!
-            </p>
-          </div>
           <div class="container">
             <div class="row">
+              <div class="col-sm-12 text-center">
+                <div class="title-area">
+                  <h2>Porfolio</h2>
+                  <div class="separator separator-danger">♦</div>
+                  <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at magni, saepe quos quod numquam soluta consectetur illum tenetur, facere consequatur in ex!
+                </p>
+                </div>
+              </div>
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-1.jpg" alt="">
@@ -289,12 +288,11 @@
           </div>
         </section>
      </main>
-    <footer>
+    <footer class="d-flex justify-content-center align-items-center">
       <div class="container">
         <div class="row">
-          <div class=" col-md-12">
-            <p>&copy; Copyright 2020 - Leticia Riera</p><br>
-            <p>Todos los derechos reservados</p>    
+          <div class="col-md-12">
+            <p>&copy; Copyright 2020 - Leticia Riera. Todos los derechos reservados</p>    
           </div>
 
         </div>
