--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1 class="col-md-6 pt-sm-0 pt-md-5">Soluciones Digitales <br>
                   Desarrollo Web y Marketing</h1>
                 <p class="col-md-6">This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p class="col-md-6"><a hre f="#" class="btn btn-primary btn-large">Learn more »</a></p>
+                <p class="col-md-6"><a hre f="#" class="btn-redondeado btn-lila">Servicios »</a></p>
               </div>
             </div>
           </div>
@@ -63,7 +63,7 @@
           <div class="container">
             <div class="row no-gutters flex-row-reverse">
               <div class="col-lg-6">
-                <img src="images/hero-image-01.png" class="img-fluid" alt="">
+                <img src="images/hero-image-02.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6 align-self-center">
                 <h2 class="mb-2">Soluciones en Marketing digital</h2>
