--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar fixed-top">
-            <img class="navbar-brand" src="images/logo.png" alt="Logo">
+            <a href="/"><img class="navbar-brand" src="images/logo.png" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,7 +54,7 @@
                 <h1 class="col-md-6 pt-sm-0 pt-md-5">Soluciones Digitales <br>
                   Desarrollo Web y Marketing</h1>
                 <p class="col-md-6">This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                <p class="col-md-6"><a hre f="#" class="btn-redondeado btn-lila">Servicios »</a></p>
+                <p class="col-md-6"><a hre f="#servicios" class="btn-redondeado btn-lila">Servicios »</a></p>
               </div>
             </div>
           </div>
