--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="sass/css/main.css">
-    <script src="js/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/navbar.js"></script>
 </head>
 <body>
     <header>
@@ -23,11 +23,11 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto ">
+              <ul  class="nav navbar-nav mr-auto w-100 justify-content-center">
                   <li class="nav-item active">
                       <a class="nav-link smooth-scroll" href="#index">Inicio<span class="sr-only">(current)</span></a>
                   </li>
-                    <li class="nav-item">
+                    <li class="nav-item ">
                         <a class="nav-link smooth-scroll" href="#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
@@ -48,12 +48,11 @@
       <main>
         <!-- Hero -->
         <section id="index" class="bgimage">
-          <div class="container-fluid">
+          <div class="container">
             <div class="row">
-              <div class="d-flex flex-column pl-sm-2 pl-md-5 pl-lg-5 pt-5 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h1 class="col-md-6 pt-sm-0 pt-md-5">Soluciones Digitales <br>
-                  Desarrollo Web y Marketing</h1>
-                <p class="col-md-6">This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+              <div class="d-flex flex-column pt-5 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h1 class="col-md-6 pt-sm-0 pt-md-5">Desarrollo Web y Marketing Digital</h1>
+                <p class="col-md-6">Soluciones y oportunidades para tu empresa en el área digital. Desarrollo web aplicando las mejores prácticas profesionales.</p>
                 <p class="col-md-6"><a href="#servicios" class="btn-redondeado btn-lila">Servicios »</a></p>
               </div>
             </div>
@@ -67,12 +66,12 @@
               </div>
               <div class="col-lg-6 align-self-center">
                 <h2 class="mb-2">Soluciones en Marketing digital</h2>
-                <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
+                <p class="mb-3">Hacé crecer tu empresa, revolucioná tus estrategias de marketing en el mundo digital. 
                 </p>
                 <ul class="fa-ul listing-mark">
-                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
-                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
-                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Lorem ipsum dolor sit amet consectetur adipisicing elit. </li>
+                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Diseño de interfaz resposiva. </li>
+                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Aplicamos las últimas tendencias en tecnología.</li>
+                  <li><span class="fa-li"><i class="far fa-check-circle"></i></i></span>Posicionamiento SEO. </li>
                 </ul>
               </div>
             </div>
@@ -90,15 +89,15 @@
                 </div>
               </div>
               <div class="col-lg-6 align-self-center">
-                <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
-                </p>
+                <!-- <p class="mb-3">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum,Lorem Ipsum.lorem quis bibendum auctor.
+                </p>-->
                 <ul class="fa-ul li__servicios servicios__margen">
                   <li>
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="fas fa-code icon__servicios"></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 mb-2 servicios__title"><a href="service-detail.html">Desarrollo web</a></h5>
-                           <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
+                           <h5 class="mt-0 mb-2 servicios__title"><a href="#">Desarrollo web</a></h5>
+                           <p class="mb-0">Diseño y desarrollo web aplicando las mejores prácticas profesionales.</p>
                         </div>
                      </div>
                   </li>
@@ -106,8 +105,8 @@
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="fas fa-rss icon__servicios""></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 mb-2 servicios__title"><a href="service-detail.html">Social Marketing</a></h5>
-                           <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
+                           <h5 class="mt-0 mb-2 servicios__title"><a href="#">Social Marketing</a></h5>
+                           <p class="mb-0">Estrategias de social media. Camapañas de anuncios en redes con Facebook Business.</p>
                         </div>
                      </div>
                   </li>
@@ -115,8 +114,8 @@
                      <div class="media service-info mt-0 mb-0">
                         <div><i class="far fa-chart-bar icon__servicios""></i></div>
                         <div class="media-body ml-3">
-                           <h5 class="mt-0 servicios__title"><a href="service-detail.html">Business Analytics</a></h5>
-                           <p class="mb-0">Progravida nibh vel velit auctor alinean sollicitudin, lorem quis bibendum auctor</p>
+                           <h5 class="mt-0 servicios__title"><a href="#">Business Analytics</a></h5>
+                           <p class="mb-0">Informes personalizados con las estadísticas de tu sitio web.</p>
                         </div>
                      </div>
                   </li>
@@ -137,27 +136,39 @@
         <div class="title-area">
           <h2>Perfil</h2>
           <div class="separator separator-danger">♦</div>
+          <p class="description">
+            El servicio de diseño web mejorará enormemente la presencia de su empresa en el área digital. Combinamos estrategias de marca y las últimas tendencias en UX de sitios web y diseño y programación de UI.
+        </p>
         </div>
       </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
            <div class="media perfil__margen">
               <div class="media-body mr-3 text-right float-left">
                  <h5 class="mt-0 mb-1 servicios__title"><a href="#">HTML 5</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
+                  </div>
+                </div>
               </div>
               <div class="service-shap align-self-center float-right"><i class="fab fa-html5 icon__servicios"></i></i></div>
            </div>
            <div class="media perfil__margen">
               <div class="media-body mr-3 text-right float-left">
                  <h5 class="mt-0 mb-1 servicios__title"><a href="#">Css</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
+                  </div>
+                </div>
               </div>
               <div class="service-shap align-self-center float-right"><i class="fab fa-css3-alt icon__servicios"></i></div>
            </div>
            <div class="media perfil__margen mb-0">
               <div class="media-body mr-3 text-right float-left">
                  <h5 class="mt-0 mb-1 servicios__title"><a href="#">React</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong>
+                  </div>
+                </div>
               </div>
               <div class="service-shap align-self-center float-right"><i class="fab fa-react icon__servicios"></i></div>
            </div>
@@ -165,26 +176,35 @@
         <div class="col-md-4 align-self-center  feature-images">
            <img src="images/herramientas.png" class="img-fluid " alt="image">
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-4 mt-3">
            <div class="media perfil__margen">
               <div class="service-shap align-self-center"><i class="fab fa-js-square icon__servicios"></i></div>
               <div class="media-body ml-3">
                  <h5 class="mt-0 mb-1 servicios__title"><a href="#">JavaScript</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
+                  </div>
+                </div>
               </div>
            </div>
            <div class="media perfil__margen">
-              <div class="service-shap align-self-center"><i class="fab fa-php icon__servicios"></i></div>
+              <div class="service-shap align-self-center"><i class="fab fa-wordpress-simple icon__servicios"></i></div>
               <div class="media-body ml-3">
-                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Php</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <h5 class="mt-0 mb-1 servicios__title"><a href="#">Wordpress</a></h5>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 95%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>95%</strong>
+                  </div>
+                </div>
               </div>
            </div>
            <div class="media perfil__margen mb-0">
               <div class="service-shap align-self-center"><i class="fas fa-database icon__servicios"></i></div>
               <div class="media-body ml-3">
                  <h5 class="mt-0 mb-1 servicios__title"><a href="#">MySql</a></h5>
-                 <p class="mb-0">It is a long established fact that a reader</p>
+                 <div class="progress">
+                  <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
+                  </div>
+                </div>
               </div>
            </div>
         </div>
@@ -201,9 +221,6 @@
                 <div class="title-area">
                   <h2>Porfolio</h2>
                   <div class="separator separator-danger">♦</div>
-                  <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius at magni, saepe quos quod numquam soluta consectetur illum tenetur, facere consequatur in ex!
-                </p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -235,11 +252,11 @@
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-4.jpg" alt="">
-                  <a class="over-area" href="#enlazarejemplo">
+                  <a class="over-area" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19" target="_blank">
                     <div class="content">
                       <label class="label label-danger label-fill">Diseño web</label>
                       <h3>Wordpress</h3>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
+                      <p>Sitio web realiado en wordpress para marca de carteras.</p>
                     </div>
                   </a>
                 </div>
@@ -262,11 +279,11 @@
         </section>
 
         <section  id="contacto">
-          <div class="container">
+          <div class="container mb-5">
             <div class="title-area">
               <h2>Contacto</h2>
               <div class="separator separator-danger">♦</div>
-              <p class="description">Dejanos tu mensaje.</p>
+              <p class="description">Dejanos tu mensaje para solicitar presupuesto.</p>
             </div>
             <form action="gracias.html" method="POST">
               <div class="row">
@@ -299,6 +316,7 @@
 
       </div>
     </footer>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
 </body>
