--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="sass/css/main.css">
-    <script src="js/navbar.js"></script>
 </head>
 <body>
     <header>
@@ -252,7 +251,7 @@
               <div class="col-md-6">
                 <div class="project">
                   <img src="images/project-4.jpg" alt="">
-                  <a class="over-area" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19" target="_blank">
+                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19" target="_blank">
                     <div class="content">
                       <label class="label label-danger label-fill">Diseño web</label>
                       <h3>Wordpress</h3>
