--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
       <div class="col-sm-12 col-lg-4 mt-lg-5">
         <div class="media mb-5">
-          <div class="order-lg-2 ml-2 mr-2">
+          <div class="ml-2 mr-2">
             <i class="fab fa-js-square icon__servicios"></i>
           </div>
           <div class="media-body  text-sm-left text-md-left">
@@ -202,7 +202,7 @@
         </div>
 
         <div class="media mb-5">
-          <div class="order-lg-2 ml-2 mr-2">
+          <div class="ml-2 mr-2">
             <i class="fab fa-wordpress-simple icon__servicios"></i>
           </div>
           <div class="media-body text-sm-left text-md-left">
@@ -215,7 +215,7 @@
         </div>
 
         <div class="media mb-5">
-          <div class="order-lg-2 ml-2 mr-2">
+          <div class="ml-2 mr-2">
             <i class="fas fa-database icon__servicios"></i>
           </div>
           <div class="media-body text-sm-left text-md-left">
