Primer interacción cone DOM

--- a/cotizar.html
+++ b/cotizar.html
@@ -62,11 +62,16 @@
     <section id="webs" class="porfolios">
         <div class="container">
           <div class="row">
+            <div id="preguntaUno" class="col-12 d-flex justify-content-center mt-4">
+              <h3>Primera pregunta</h3>
+            </div>
+
+
             <div class="col-md-3">
               <div class="project text-center">
                 <a href="#"><img class="img__tiposweb" src="images/institucional.png" alt=""></a>
-                  <div class="content">
-                    <label class="label label-danger label-fill text-center">Institucional</label>
+                  <div id="productoUno">
+                    <h5>Producto 1</h5>
                   </div>
               </div>
             </div>
@@ -74,33 +79,40 @@
             <div class="col-md-3">
               <div class="project text-center">
                 <a href="#"><img class="img__tiposweb" src="images/blog.png" alt=""></a>
-                  <div class="content">
-                    <label class="label label-danger label-fill text-center">Blog</label>
-                  </div>
+                    <div id="productoDos">
+                      <h5>Producto 2</h5>
+                    </div>
               </div>
             </div>
 
             <div class="col-md-3">
               <div class="project text-center">
                 <a href="#"><img class="img__tiposweb" src="images/tinda-online.png" alt=""></a>
-                  <div class="content">
-                    <label class="label label-danger label-fill text-center">Tienda Online</label>
-                  </div>
+                <div id="productoTres">
+                  <h5>Producto 3</h5>
+                </div>
               </div>
             </div>
 
             <div class="col-md-3">
               <div class="project text-center">
                 <a href="#"><img class="img__tiposweb" src="images/a-medida.png" alt=""></a>
-                  <div class="content">
-                    <label class="label label-danger label-fill text-center">A medida</label>
-                  </div>
+                <div id="productoCuatro">
+                  <h5>Producto 4</h5>
+                </div>
               </div>
+            </div>
+
+            <div id="resultadoPrecio">
+
             </div>
 
           </div>
         </div>    
     </section>
+
+
+    
 
 <script src="js/main.js"></script>
 </body>
