--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="media-body order-1 text-lg-right text-sm-left text-md-left">
             <h5 class="mt-0 mb-1 servicios__title"><a href="#">React</a></h5>
             <div class="progress">
-              <div class="progress-bar bg-proceso" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>75%</strong>
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 55%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>55%</strong>
               </div>
             </div>
           </div>
@@ -195,7 +195,7 @@
           <div class="media-body  text-sm-left text-md-left">
             <h5 class="mt-0 mb-1 servicios__title"><a href="#">JavaScript</a></h5>
             <div class="progress">
-              <div class="progress-bar bg-proceso" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong>
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>70%</strong>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
           <div class="media-body text-sm-left text-md-left">
             <h5 class="mt-0 mb-1 servicios__title"><a href="#">Wordpress</a></h5>
             <div class="progress">
-              <div class="progress-bar bg-proceso" role="progressbar" style="width: 90%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>90%</strong>
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>80%</strong>
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
           <div class="media-body text-sm-left text-md-left">
             <h5 class="mt-0 mb-1 servicios__title"><a href="#">MySql</a></h5>
             <div class="progress">
-              <div class="progress-bar bg-proceso" role="progressbar" style="width: 85%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>85%</strong>
+              <div class="progress-bar bg-proceso" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><strong>70%</strong>
               </div>
             </div>
           </div>
@@ -245,12 +245,12 @@
               </div>
               <div class="col-md-6">
                 <div class="project">
-                  <img src="images/project-1.jpg" alt="">
-                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
+                  <img src="images/revista-internos.jpg" alt="">
+                  <a class="over-area" rel="noopener" href="https://www.revistainternos.com.ar" target="_blank">
                     <div class="content">
-                      <label class="label label-danger label-fill">Diseño web</label>
-                      <h3>Desarrollo Front End</h3>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
+                      <label class="label label-danger label-fill">Desarrollo web</label>
+                      <h3>Revista Internos</h3>
+                      <p>Sitio web realizado en Wordpress para medio de comunicación frutihortícola.</p>
                     </div>
                   </a>
                 </div>
@@ -258,12 +258,12 @@
 
               <div class="col-md-6">
                 <div class="project">
-                  <img src="images/project-6.jpg" alt="">
-                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
+                  <img src="images/frutea-tu-escuela.jpg" alt="">
+                  <a class="over-area" rel="noopener" href="https://www.fruteatuescuela.com.ar" target="_blank">
                     <div class="content">
-                      <label class="label label-danger label-fill">Marketing</label>
-                      <h3>Social Marketing</h3>
-                      <p>Estrategia de marketing para pautar en redes sociales.</p>
+                      <label class="label label-danger label-fill">Desarrollo web</label>
+                      <h3>Fruteá Tu Escuela</h3>
+                      <p>Sitio web realizado en Wordpress para un concurso para escuelas públicas y privadas de todo el país.</p>
                     </div>
                   </a>
                 </div>
@@ -271,12 +271,12 @@
 
               <div class="col-md-6">
                 <div class="project">
-                  <img src="images/project-4.jpg" alt="">
-                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19" target="_blank">
+                  <img src="images/estilo-limpio.jpg" alt="">
+                  <a class="over-area" rel="noopener" href="https://www.estilolimpio.com.ar" target="_blank">
                     <div class="content">
-                      <label class="label label-danger label-fill">Diseño web</label>
-                      <h3>Wordpress</h3>
-                      <p>Sitio web realiado en wordpress para marca de carteras.</p>
+                      <label class="label label-danger label-fill">Desarrollo web</label>
+                      <h3>Estilo Limpio</h3>
+                      <p>Desarrollo web para empresa de limpieza.</p>
                     </div>
                   </a>
                 </div>
@@ -284,12 +284,12 @@
       
               <div class="col-md-6">
                 <div class="project">
-                  <img src="images/project-3.jpg" alt="">
-                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19">
+                  <img src="images/citterio.jpg" alt="">
+                  <a class="over-area" rel="noopener" href="https://www.behance.net/gallery/71046961/Citterio-Ss-19" target="_blank">
                     <div class="content">
-                      <label class="label label-danger label-fill">Analytics</label>
-                      <h3>Google Analytics</h3>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo, officia, aut delectus aspernatur nobis debitis possimus dolor, corporis unde fuga.</p>
+                      <label class="label label-danger label-fill">Marketing digital</label>
+                      <h3>Citterio</h3>
+                      <p>Desarrollo web y estrategias en marketing digital para lanzameinto colección 2019</p>
                     </div>
                   </a>
                 </div>
