--- a/cotizar.html
+++ b/cotizar.html
@@ -47,13 +47,12 @@
 
     <section id="index"  class="solutions">
         <div class="container">
-          <div class="row no-gutters flex-row-reverse">
-            <div class="col-lg-12 align-self-center">
-              <h2 class="mb-12 text-center">Cotizá tu web</h2>
+          <div class="row no-gutters flex-row-reverse mt-4">
+            <div class="col-lg-12 align-self-center mt-4">
+              <h2 class="mb-12 text-center mt-4">Cotizá tu web</h2>
               <p class="mb-12 text-center">En este cotizador online podés realizar un presupuesto aproximado para crear tu página web.<br>¡Completa las preguntas para obtener un presupuesto web al instante!
               </p>
               <p class="col-md-12 text-center"><a href="#cotizar" class="btn-redondeado btn-lila">Comenzar presupuesto »</a></p>
-              <div>
             </div>
           </div>
         </div>
@@ -69,7 +68,7 @@
 
             <div class="col-md-3">
               <div class="project text-center">
-                <a href="#"><img class="img__tiposweb" src="images/institucional.png" alt=""></a>
+                <img class="img__tiposweb" src="images/institucional.png" alt=""></a>
                   <div id="productoUno">
                     <h5>Producto 1</h5>
                   </div>
@@ -111,6 +110,32 @@
         </div>    
     </section>
 
+<!-- ÉSTA SERÍA LA ÚLTIMA PANTALLA QUE SE CARGARÍA, AL MAIL DEBERÍA LLEGAR UN RESUMEN DEL PRESUPUESTO Y LOS DATOS DE CONTACTO -->
+
+
+<section class="solutions">
+  <div class="container">
+    <div class="row no-gutters flex-row-reverse mt-4">
+      <div class="col-lg-12 align-self-center mt-4">
+        <h2 class="mb-12 text-center mt-4">Datos de contacto</h2>
+        <p class="mb-12 text-center">Por útlimo te solicitamos tus datos personales para ponernos en contacto.
+        </p>
+
+        <div id="contacto" class="col-12 mb-3">
+          <input type="text" class="form-control col-6 mb-3" placeholder="Nombre">
+          <input type="text" class="form-control col-6 mb-3"  placeholder="Apellido">
+          <input type="tel"class="form-control col-6 mb-3"   placeholder="Teléfono">
+          <input type="email"class="form-control col-6 mb-3"   placeholder="Email">
+          <button id="btnEnviar" class="btn btn-primary">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section>
+  
+</section>
 
     
 
