--- a/cotizar.html
+++ b/cotizar.html
@@ -58,7 +58,7 @@
         </div>
     </section>
 
-    <section id="webs" class="porfolios">
+    <section id="pregunta-1" class="porfolios">
         <div class="container">
           <div class="row">
             <div id="preguntaUno" class="col-12 d-flex justify-content-center mt-4">
@@ -113,7 +113,7 @@
 <!-- ÉSTA SERÍA LA ÚLTIMA PANTALLA QUE SE CARGARÍA, AL MAIL DEBERÍA LLEGAR UN RESUMEN DEL PRESUPUESTO Y LOS DATOS DE CONTACTO -->
 
 
-<section class="solutions">
+<section id="formCotizar" class="solutions">
   <div class="container">
     <div class="row no-gutters flex-row-reverse mt-4">
       <div class="col-lg-12 align-self-center mt-4">
@@ -121,24 +121,21 @@
         <p class="mb-12 text-center">Por útlimo te solicitamos tus datos personales para ponernos en contacto.
         </p>
 
-        <div id="contacto" class="col-12 mb-3">
-          <input type="text" class="form-control col-6 mb-3" placeholder="Nombre">
-          <input type="text" class="form-control col-6 mb-3"  placeholder="Apellido">
-          <input type="tel"class="form-control col-6 mb-3"   placeholder="Teléfono">
-          <input type="email"class="form-control col-6 mb-3"   placeholder="Email">
-          <button id="btnEnviar" class="btn btn-primary">Enviar</button>
+        <div id="contacto" class="mb-3 col-12">
+          <input type="text" class="form-control col-12 mb-3" placeholder="Nombre">
+          <input type="text" class="form-control col-12 mb-3"  placeholder="Apellido">
+          <input type="tel"class="form-control col-12 mb-3"   placeholder="Teléfono">
+          <input type="email" class="form-control col-12 mb-3"   placeholder="Email">
+          <button id="btnEnviar" class="btn btn-primary mb-">Enviar</button>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section>
-  
-</section>
 
-    
-
+<script src="js/jquery-3.5.1.js"></script>
+<script src="js/db.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
