--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 
       </div>
     </footer>
+    <script src="js/jquery-3.5.1.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
