--- a/cotizar.html
+++ b/cotizar.html
@@ -63,14 +63,14 @@
         <div class="row">
 
 
-          <div id="preguntaUno" class="mb-4">
+          <div id="preguntaUno" class="mb-4 col-12 text-center">
             <h2 class="col-12 text-center">¿Qué tipo de web estás buscando?</h2>
           </div>
           
-          <div id="preguntaDos">
+          <!-- <div id="preguntaDos">
             <h2 class="col-12 text-center">¿Qué diseño necesitas?</h2>
             
-          </div>
+          </div> -->
 
           <div id="resumen" class="marginBottom__Cotizar col-md-12">
 
@@ -82,7 +82,7 @@
 
 
 <script src="js/jquery-3.5.1.js"></script>
-<script src="js/db.js"></script>
+<!-- <script src="js/db.js"></script> -->
 <script src="js/main.js"></script>
 </body>
 </html>
